# CS5614_final

./: .gitignore  Dockerfile  LICENSE  README.md  read.py  render.yml
DBSCAN/: clustering.ipynb
EDA/: eda_on_aqi.ipynb  eda_on_rentals.ipynb  final_rental_listings_with_qol.csv  heatmap_nearby_bus_stops.html  heatmap_nearby_parks.html  nearest_bus_stop_heatmap.html  nearest_park_heatmap.html  temp.csv
HDBSCAN/: clustering.ipynb  final_clustering_results.csv
Streamlit/: app.py  temp.csv
api/: air_quality_api.py  air_quality_api_old.py
client/: .dockerignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
client/src/: App.css  (+4 more)
data_analysis/: pyproject.toml
data_analysis/EDA/: final_rental_listings_with_qol.csv  heatmap_nearby_bus_stops.html  heatmap_nearby_parks.html  nearest_bus_stop_heatmap.html  nearest_park_heatmap.html  temp.csv
data_analysis/HDBSCAN/: clustering.ipynb  final_clustering_results.csv
data_analysis/Streamlit/: app.py
data_analysis/Streamlit/pages/: 1_Workflow.py  2_EDA_FE.py
raw_data/: Crime_Incidents_in_2023.csv  air_quality_data.json  air_quality_results_old.json  bus_stops.json
scripts/: .env.example  air_quality_import.py  bus_stops_import.py  crime_reports_import.py  crime_resport_import.py  google_reviews_score_import.py  import.py  openstreet_parks_import.py  price_script.py  pyproject.toml  qol_calculation.py  rental_listings_import.py  walkscore_import.py
server/: .env.example  app.py  pyproject.toml
sql/: init.sql
utils/: convert_qol.py  db_connection.py  db_engine.py
(+14 files in other folders)
